Update nginx image to stable-perl

--- a/nginxtest/overlays/local/images.yaml
+++ b/nginxtest/overlays/local/images.yaml
@@ -1,4 +1,4 @@
 # Change container images
 - op: replace
   path: /spec/template/spec/containers/0/image
-  value: nginx:stable-perl
+  value: nginx:stable
